# rocket-include-tera

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
examples/: hello_world_pages.rs
examples/views/: index.tera  index2.tera
src/: fairing.rs  lib.rs  macros.rs  manager.rs  reloadable.rs
src/debug/: fairing.rs  macros.rs  manager.rs  mod.rs  reloadable.rs  tera_response.rs
src/release/: fairing.rs  macros.rs  manager.rs  mod.rs  tera_response.rs
tests/: init.rs
