[package]
name = "rocket-include-tera"
version = "0.4.20"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/rocket-include-tera"
homepage = "https://magiclen.org/rocket-include-tera"
keywords = ["rocket", "server", "web", "static", "tera"]
categories = ["web-programming"]
description = "This is a crate which provides macros `tera_resources_initialize!` and `tera_response!` to statically include Tera files from your Rust project and make them be the HTTP response sources quickly."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[badges.travis-ci]
repository = "magiclen/rocket-include-tera"
branch = "master"

[dependencies]
rocket = "0.4.2"
crc-any = "2"
html-minifier = "3"
rc-u8-reader = "2.0.1"
lru_time_cache = "0.11"
tera = "1.5"
serde = "1"
serde_json = "1"

rocket-etag-if-none-match = "0.3"

[dependencies.educe]
version = ">=0.4.0"
features = ["Debug"]
default-features = false

[dev-dependencies.json-gettext]
version = "3"
features = ["rocketly"]